@@ -1,3 +1,10 @@
+2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs,
+	  MonoDevelop.Projects.Extensions/ProjectExtensionUtil.cs,
+	  MonoDevelop.Projects.Extensions/ISolutionItemHandler.cs: Added
+	  support for path encoding/decoding specific to the file format.
+
 2008-07-09  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.Projects.Dom/ResolveResult.cs,
